[package]
name = "phish-multi-setlist"
version = "0.1.0"
edition = "2021"
authors = [ "paradise-runner <henry.e.champion@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.0", features = ['http', 'd1'] }
worker-macros = { version = "0.4.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }
serde_json = "1.0.108"
serde = "1.0.193"
chrono = "0.4.31"
reqwest = "0.11.18"